# rust-cli-template

./: Cargo.toml
src/: main.rs
